--- a/MathNPlaysLogo/DEBIAN/control
+++ b/MathNPlaysLogo/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: com.the-shock.mathnplayslogo
-Name: Math N Plays Zeppelin Logo
+Name: MathNPlaysLogo
 Version: 1.0
 Architecture: iphoneos-arm
 Description: A custom Zeppelin theme for YouTuber "Math 'N Plays"
